# red-pill-py

./: .gitignore  CHART_INTEGRATION.md
redpill/: DOCUMENTATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
redpill/src/redpill/: __init__.py  client.py
redpill/src/redpill/agents/: __init__.py  base.py  intent_spec_agent.py  langgraph_agent.py  validator.py
redpill/src/redpill/config/: __init__.py  builder.py
redpill/src/redpill/executor/: __init__.py  polars_executor.py
redpill/src/redpill/processor/: __init__.py  flattener.py  normalizer.py  processor.py
redpill/src/redpill/prompts/: intent_spec.py
redpill/src/redpill/providers/: __init__.py
redpill/src/redpill/spec/: schema.py
redpill/tests/: test_smoke.py
redpillx/: README.md  build_hook.py  pyproject.toml
redpillx/src/redpillx/: __init__.py  client.py
redpillx/src/redpillx/agents/: __init__.py  base.py  intent_spec_agent.py  langgraph_agent.py  validator.py
redpillx/src/redpillx/config/: builder.py
redpillx/src/redpillx/executor/: __init__.py  polars_executor.py
redpillx/src/redpillx/processor/: __init__.py  normalizer.py  processor.py  profiler.py
redpillx/src/redpillx/prompts/: __init__.py  intent_spec.py  validation.py
redpillx/src/redpillx/providers/: __init__.py
redpillx/src/redpillx/spec/: __init__.py
redpillx/tests/: test_smoke.py
webapp/: next.config.ts  package-lock.json  package.json
webapp/src/app/: page.tsx
webapp/src/app/api/chart/: route.ts
webapp/src/app/api/chart/execute/: route.ts
webapp/src/app/executor/: page.tsx
